--- a/src/index.css
+++ b/src/index.css
@@ -173,7 +173,8 @@ header {
   }
 
   .links a:not(:last-child) {
-    margin-right: 20px;
+    margin-right: 30px;
+    display: inline;
   }
 
   .links.open {
