--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -21,7 +21,6 @@
   height: 250px;
   z-index: 50;
   border-radius: 250px;
-  border: 1px solid var(--grey);
 }
 
 .contentContainer {
@@ -43,6 +42,7 @@
 
 .contentDescription {
   color: var(--secondary-text-color);
+  text-align: justify;
 }
 
 .infoContainer {
