--- a/src/index.css
+++ b/src/index.css
@@ -95,10 +95,12 @@ header {
   justify-content: space-between;
   align-items: center;
   margin-left: 10px;
+  z-index: 100;
 }
 
 .logo {
   height: 30px;
+  z-index: 1;
 }
 
 .links {
@@ -137,6 +139,7 @@ header {
   border: none;
   font-size: 16px;
   cursor: pointer;
+  z-index: 1;
 }
 
 .openMenu,
